# HEU-Robocon

./: .gitignore  README.md  get_pictures.py  guide.md  lh.txt
2023/: CMakeCache.txt  CMakeLists.txt  Makefile  RC2023  README.md  cmake_install.cmake  main.cpp
2023/Yolo/: Yolov5.h  int8calib_old.table  utils.h  yololayer.h  yolov5.cpp  yolov5_trt.py
2023/Yolo/coco_calib/: int8calib.table
2023/include/: Tower_Detection.h  serial_port.h
2023/src/: Control_method.cpp  Tower_Detection.cpp  serial_port.cpp
2024/: README.md  data.txt
2024/include/: Barn_Detection.h  serial_port.h
2024/src/: Ball_Detection.cpp  Barn_Detection.cpp  ball.cpp  main_back.cpp  serial_port.cpp  usb_camera.cpp
2025/: README.md
2025/杂项/: guide.md
2025/杂项/scripts/: change_name.sh  get_pictures.py  unify_labels_inplace.py
2025/飞身上篮/ros_ws/: README.md  robocon_launch.service  test_pakages.7z
2025/飞身上篮/ros_ws/tf_transformer/: CMakeLists.txt
2025/飞身上篮/预选赛/: README.md
2025/飞身上篮/预选赛/models/: README.md
2026/: README.md
common/: COMMENTS.md
杂项/: get_pictures.py
杂项/robocon_site/: robocon.html
杂项/scripts/: merge_datasets.py
第24届ROBOCON飞身上篮/预选赛/circle_position/: CMakeLists.txt
飞身上篮/data_augmentation/: data_augmentation.py  get_data.py
飞身上篮/ros_ws/: README.md  launch.sh
飞身上篮/ros_ws/serial_sender/: CMakeLists.txt
飞身上篮/预选赛/: CMakeLists.txt  YOLO-Circle-Position-dual.py  YOLO-Circle-Position-k4a.py  YOLO-Circle-Position-rs.py  YOLO-Circle-Position.py  requirements.txt  test.py
飞身上篮/预选赛/cpp/: Circle_Position.cpp
飞身上篮/预选赛/python/: YOLO-Circle-Position-dual.py  YOLO-Circle-Position-k4a.py  YOLO-Circle-Position-rs.py
飞身上篮/预选赛/src/cpp/: Circle_Position.cpp  yolo_kinect_node.cpp  yolo_realsense_node.cpp
飞身上篮/预选赛/src/launch/: yolo_realsense.launch
飞身上篮/预选赛/src/python/: YOLO-Circle-Position-rs.py
(+23 files in other folders)
